--- a/app/src/main/res/layout/fragment_break_service.xml
+++ b/app/src/main/res/layout/fragment_break_service.xml
@@ -26,6 +26,20 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Break system"
+                android:textStyle="bold"
+                android:textSize="22dp" />
+
+                </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
