--- a/app/src/main/res/layout/activity_energy_show.xml
+++ b/app/src/main/res/layout/activity_energy_show.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.AddCar">
+    tools:context="com.carmemorize.app.activity.AddCar">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
