--- a/app/src/main/res/layout/activity_list_energy.xml
+++ b/app/src/main/res/layout/activity_list_energy.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.ListCar">
+    tools:context="com.carmemorize.app.activity.ListCar">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
