--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.anint.anurak.carmemorize.activity.History">
+    tools:context="com.carmemorize.app.activity.History">
 
     <android.support.design.widget.AppBarLayout
         android:layout_height="wrap_content"
