--- a/app/src/main/res/layout/fragment_radiater_service.xml
+++ b/app/src/main/res/layout/fragment_radiater_service.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.AddCar">
+    tools:context="com.carmemorize.app.activity.AddCar">
 
     <LinearLayout
         android:layout_below="@+id/app_bar"
