--- a/app/src/main/res/layout/activity_car_show.xml
+++ b/app/src/main/res/layout/activity_car_show.xml
@@ -18,13 +18,29 @@
             android:background="?attr/colorPrimary">
 
             <TextView
+                android:id="@+id/toolbar_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Add My Car"
                 android:textSize="22dp"
-                android:layout_marginRight="45dp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:text="@string/text_add_my_car"
+                android:layout_marginRight="53dp"
+                android:gravity="center"/>
+
+            <LinearLayout
+                android:id="@+id/img_edit_car"
+                android:gravity="center"
+                android:layout_width="55dp"
+                android:layout_height="55dp"
+                android:layout_gravity="end">
+
+                <ImageView
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_edit"/>
+
+            </LinearLayout>
 
         </android.support.v7.widget.Toolbar>
 
@@ -60,6 +76,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
+                    android:text="-"
                     android:layout_weight="2" />
             </LinearLayout>
             <LinearLayout
@@ -80,6 +97,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
+                    android:text="-"
                     android:layout_weight="2" />
             </LinearLayout>
             <LinearLayout
@@ -100,6 +118,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
+                    android:text="-"
                     android:layout_weight="2" />
             </LinearLayout>
 
@@ -130,6 +149,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
+                    android:text="-"
                     android:layout_weight="2" />
 
             </LinearLayout>
@@ -152,6 +172,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
+                    android:text="-"
                     android:layout_weight="2" />
 
             </LinearLayout>
