--- a/app/src/main/res/layout/activity_my_car.xml
+++ b/app/src/main/res/layout/activity_my_car.xml
@@ -32,14 +32,13 @@
                 android:gravity="center"
                 android:layout_width="55dp"
                 android:layout_height="55dp"
-                android:layout_gravity="end"
-                android:layout_marginRight="20dp">
+                android:layout_gravity="end">
 
                 <ImageView
                     android:layout_gravity="center"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/add_icon"/>
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_add"/>
 
             </LinearLayout>
 
