--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,26 +42,29 @@
             android:gravity="center"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:weightSum="1">
 
             <ImageView
                 android:id="@+id/btn_my_car"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/mycar"/>
+                android:layout_width="130dp"
+                android:layout_height="120dp"
+                android:src="@drawable/mycar" />
         </LinearLayout>
 
         <LinearLayout
             android:gravity="center"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:weightSum="1">
 
             <ImageView
                 android:id="@+id/btn_energy"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/energy"/>
+                android:layout_width="130dp"
+                android:layout_height="120dp"
+                android:src="@drawable/energy"
+                android:layout_weight="0.22" />
 
         </LinearLayout>
 
@@ -78,26 +81,30 @@
             android:gravity="center"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:weightSum="1">
 
             <ImageView
                 android:id="@+id/btn_tax"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/tax"/>
+                android:layout_width="130dp"
+                android:layout_height="120dp"
+                android:src="@drawable/tax"
+                android:layout_weight="0.47" />
         </LinearLayout>
 
         <LinearLayout
             android:gravity="center"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:weightSum="1">
 
             <ImageView
                 android:id="@+id/btn_service"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/service"/>
+                android:layout_width="130dp"
+                android:layout_height="120dp"
+                android:src="@drawable/service"
+                android:layout_weight="0.16" />
 
         </LinearLayout>
 
@@ -114,26 +121,30 @@
             android:gravity="center"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:weightSum="1">
 
             <ImageView
                 android:id="@+id/btn_histoty"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/history"/>
+                android:layout_width="130dp"
+                android:layout_height="120dp"
+                android:layout_weight="0.22"
+                android:src="@drawable/history" />
         </LinearLayout>
 
         <LinearLayout
             android:gravity="center"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:weightSum="1">
 
             <ImageView
                 android:id="@+id/btn_summaty"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/summary"/>
+                android:layout_width="130dp"
+                android:layout_height="120dp"
+                android:src="@drawable/summary"
+                android:layout_weight="0.10" />
 
         </LinearLayout>
 
