--- a/app/src/main/res/layout/activity_add_my_car.xml
+++ b/app/src/main/res/layout/activity_add_my_car.xml
@@ -154,7 +154,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:weightSum="1">
 
             <TextView
                 android:layout_width="match_parent"
@@ -164,9 +165,10 @@
 
             <ImageView
                 android:id="@+id/im_take_photo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/camera_icon"/>
+                android:layout_width="102dp"
+                android:layout_height="91dp"
+                android:src="@drawable/camera_icon"
+                android:layout_weight="0.27" />
         </LinearLayout>
 
         <LinearLayout
