--- a/app/src/main/res/layout/activity_tax_show.xml
+++ b/app/src/main/res/layout/activity_tax_show.xml
@@ -144,7 +144,7 @@
                 android:id="@+id/select_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/add_photo"/>
+                android:src="@drawable/camera_icon"/>
 
 
         </LinearLayout>
