--- a/app/src/main/res/layout/activity_tax_show.xml
+++ b/app/src/main/res/layout/activity_tax_show.xml
@@ -20,11 +20,11 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="45dp"
                 android:gravity="center"
-                android:text="Name of car"
+                android:text="TAX"
                 android:textSize="22dp"
-                android:textStyle="bold"
-                android:layout_marginRight="45dp"/>
+                android:textStyle="bold" />
 
         </android.support.v7.widget.Toolbar>
 
