--- a/app/src/main/res/layout/activity_energy_show.xml
+++ b/app/src/main/res/layout/activity_energy_show.xml
@@ -35,12 +35,14 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="15dp">
+        android:padding="15dp"
+        android:weightSum="1">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="248dp"
+            android:orientation="vertical"
+            android:layout_weight="0.03">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -51,8 +53,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:textSize="18sp"
-                    android:text="Date " />
+                    android:text="@string/date"
+                    android:textSize="18sp" />
 
                 <EditText
                     android:id="@+id/et_dateOfEnergyShow"
@@ -61,6 +63,8 @@
                     android:layout_weight="2" />
 
             </LinearLayout>
+
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -70,8 +74,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:textSize="18sp"
-                    android:text="Station " />
+                    android:text="@string/station"
+                    android:textSize="18sp" />
 
                 <EditText
                     android:id="@+id/station"
@@ -79,6 +83,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="2" />
             </LinearLayout>
+
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -111,8 +117,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:textSize="18sp"
-                    android:text="Mileage " />
+                    android:text="@string/mileage"
+                    android:textSize="18sp" />
 
                 <EditText
                     android:id="@+id/mile"
@@ -121,11 +127,11 @@
                     android:layout_weight="1" />
 
                 <TextView
-                    android:gravity="center"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:text="Kilometer"/>
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="@string/Kilometer" />
             </LinearLayout>
 
             <LinearLayout
@@ -137,8 +143,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:textSize="18sp"
-                    android:text="Volume " />
+                    android:text="@string/Volume"
+                    android:textSize="18sp" />
 
                 <EditText
                     android:id="@+id/volume"
@@ -164,11 +170,12 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/textView2"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:textSize="18sp"
-                    android:text="Net Price " />
+                    android:text="@string/netprice"
+                    android:textSize="18sp" />
 
                 <EditText
                     android:id="@+id/net_price"
