--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -20,14 +20,20 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="History"
-                android:textSize="22dp"
-                android:textStyle="bold"
                 android:layout_marginRight="45dp"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:text="@string/History"
+                android:textSize="22dp"
+                android:textStyle="bold" />
 
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
+
+
+
+
+
+
 
 </LinearLayout>
