--- a/app/src/main/res/layout/activity_list_energy.xml
+++ b/app/src/main/res/layout/activity_list_energy.xml
@@ -10,7 +10,10 @@
         android:id="@+id/app_bar"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarOverlay"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -22,10 +25,11 @@
                 android:id="@+id/toolbar_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="22dp"
-                android:textStyle="bold"
                 android:layout_marginRight="53dp"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:text="@string/energy"
+                android:textSize="22dp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:id="@+id/im_add_enegy"
