--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -7,6 +7,7 @@
     tools:context="com.carmemorize.app.activity.History">
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:theme="@style/AppTheme.AppBarOverlay">
@@ -30,10 +31,28 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <ListView
+        android:layout_below="@+id/app_bar"
+        android:id="@+id/history_ListItem"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:dividerHeight="3.0sp"/>
+
+    <ImageView
+        android:id="@+id/no_energy"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+
+    <TextView
+        android:layout_below="@+id/no_energy"
+        android:gravity="center"
+        android:id="@+id/text_deflaut"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"/>
 
 
 
-
-
-
-</LinearLayout>
+</RelativeLayout>
