--- a/app/src/main/res/layout/fragment_oil_service.xml
+++ b/app/src/main/res/layout/fragment_oil_service.xml
@@ -11,9 +11,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/app_bar"
         android:orientation="vertical"
-        android:padding="15dp">
+        android:padding="15dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -30,8 +32,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Oil change"
-                    android:textStyle="bold"
-                    android:textSize="22dp" />
+                    android:textSize="22dp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
@@ -89,6 +91,7 @@
                     android:textSize="18sp" />
 
             </LinearLayout>
+
             <LinearLayout
                 android:id="@+id/next_kilo"
                 android:layout_width="match_parent"
@@ -164,19 +167,17 @@
             </LinearLayout>
 
 
-
-
-
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/layout_image_tax"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2"
+            android:layout_weight="0.98"
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/textView3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Comment"
@@ -191,15 +192,16 @@
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
                 android:layout_marginTop="15dp"
-                android:layout_weight="2"
+                android:layout_weight="0.74"
                 android:background="@color/grey_100"
                 android:gravity="center"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:weightSum="1">
 
                 <EditText
                     android:id="@+id/comment_radiater"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="105dp"
                     android:background="@android:color/transparent"
                     android:gravity="top"
                     android:inputType="textMultiLine"
