--- a/app/src/main/res/layout/fragment_tire_service.xml
+++ b/app/src/main/res/layout/fragment_tire_service.xml
@@ -122,10 +122,11 @@
             android:id="@+id/layout_image_tax"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="3"
+            android:layout_weight="0.97"
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Comment"
